--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendentrycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendentrycollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="02547-101">表示 legendEntries 的集合。</span><span class="sxs-lookup"><span data-stu-id="02547-101">Represents a collection of legendEntries.</span></span>
+      表示 legendEntries 的集合。
 
-      <span data-ttu-id="02547-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02547-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartLegendEntryCollectionLoadOptions
     fullName: Excel.Interfaces.ChartLegendEntryCollectionLoadOptions
     langs:
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#visible:member'
       - 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="02547-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="02547-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="02547-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="02547-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="02547-105">).</span><span class="sxs-lookup"><span data-stu-id="02547-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="02547-106">对于集合中的每一项：表示图表图例上的 legendEntry 的高度。</span><span class="sxs-lookup"><span data-stu-id="02547-106">For EACH ITEM in the collection: Represents the height of the legendEntry on the chart legend.</span></span>
+      对于集合中的每一项：指定图表图例上的 legendEntry 的高度。
 
-      <span data-ttu-id="02547-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02547-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#index:member'
     summary: |-
-      <span data-ttu-id="02547-108">对于集合中的每一项：代表图表图例中的 legendEntry 的索引。</span><span class="sxs-lookup"><span data-stu-id="02547-108">For EACH ITEM in the collection: Represents the index of the legendEntry in the chart legend.</span></span>
+      对于集合中的每一项：指定图表图例中的 legendEntry 的索引。
 
-      <span data-ttu-id="02547-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02547-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -63,9 +63,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="02547-110">对于集合中的每一项：表示图表 legendEntry 的左侧。</span><span class="sxs-lookup"><span data-stu-id="02547-110">For EACH ITEM in the collection: Represents the left of a chart legendEntry.</span></span>
+      对于集合中的每一项：指定图表 legendEntry 的左侧。
 
-      <span data-ttu-id="02547-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02547-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -78,9 +78,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="02547-112">对于集合中的每一项：表示图表 legendEntry 的顶部。</span><span class="sxs-lookup"><span data-stu-id="02547-112">For EACH ITEM in the collection: Represents the top of a chart legendEntry.</span></span>
+      对于集合中的每一项：指定图表 legendEntry 的顶部。
 
-      <span data-ttu-id="02547-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02547-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -93,9 +93,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="02547-114">对于集合中的每一项：表示图表图例项的可见项。</span><span class="sxs-lookup"><span data-stu-id="02547-114">For EACH ITEM in the collection: Represents the visible of a chart legend entry.</span></span>
+      对于集合中的每一项：表示图表图例项的可见项。
 
-      <span data-ttu-id="02547-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02547-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -108,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="02547-116">对于集合中的每一项：表示图表图例上的 legendEntry 的宽度。</span><span class="sxs-lookup"><span data-stu-id="02547-116">For EACH ITEM in the collection: Represents the width of the legendEntry on the chart Legend.</span></span>
+      对于集合中的每一项：表示图表图例上的 legendEntry 的宽度。
 
-      <span data-ttu-id="02547-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02547-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
