--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivottablecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivottablecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="c1f8c-101">表示属于工作簿或工作表的所有 PivotTable 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="c1f8c-101">Represents a collection of all the PivotTables that are part of the workbook or worksheet.</span></span>
+      表示属于工作簿或工作表的所有 PivotTable 对象的集合。
 
-      <span data-ttu-id="c1f8c-102">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1f8c-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.PivotTableCollectionLoadOptions
     fullName: Excel.Interfaces.PivotTableCollectionLoadOptions
     langs:
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#name:member'
       - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="c1f8c-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="c1f8c-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="c1f8c-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="c1f8c-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="c1f8c-105">).</span><span class="sxs-lookup"><span data-stu-id="c1f8c-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="c1f8c-106">对于集合中的每一项：数据透视表的 Id。</span><span class="sxs-lookup"><span data-stu-id="c1f8c-106">For EACH ITEM in the collection: Id of the PivotTable.</span></span> <span data-ttu-id="c1f8c-107">只读。</span><span class="sxs-lookup"><span data-stu-id="c1f8c-107">Read-only.</span></span>
+      对于集合中的每一项：数据透视表的 Id。
 
-      <span data-ttu-id="c1f8c-108">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1f8c-108">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#layout:member'
     summary: |-
-      <span data-ttu-id="c1f8c-109">对于集合中的每一项：描述数据透视表的布局和可视结构的 PivotLayout。</span><span class="sxs-lookup"><span data-stu-id="c1f8c-109">For EACH ITEM in the collection: The PivotLayout describing the layout and visual structure of the PivotTable.</span></span>
+      对于集合中的每一项：描述数据透视表的布局和可视结构的 PivotLayout。
 
-      <span data-ttu-id="c1f8c-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1f8c-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: layout
     fullName: layout
     langs:
@@ -61,9 +61,9 @@ items:
           - 'excel!Excel.Interfaces.PivotLayoutLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="c1f8c-111">对于集合中的每一项：数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="c1f8c-111">For EACH ITEM in the collection: Name of the PivotTable.</span></span>
+      对于集合中的每一项：数据透视表的名称。
 
-      <span data-ttu-id="c1f8c-112">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1f8c-112">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -76,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="c1f8c-113">对于集合中的每一项：包含当前数据透视表的工作表。</span><span class="sxs-lookup"><span data-stu-id="c1f8c-113">For EACH ITEM in the collection: The worksheet containing the current PivotTable.</span></span>
+      对于集合中的每一项：包含当前数据透视表的工作表。
 
-      <span data-ttu-id="c1f8c-114">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1f8c-114">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
